--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
 				</ul>
 				</div>
 			<div class="col-sm-1">
-			<img   src="img/reza.jpg" id="reza_image" >
+			<img   src="img/Reza.jpg" id="reza_image" >
 			</div>
 			
 		</div>
@@ -56,7 +56,7 @@
 				</ul>
 				</div>
 			<div class="col-sm-1">
-			<img   src="img/reza.jpg" id="reza_image" >
+			<img   src="img/Reza.jpg" id="reza_image" >
 			</div>
 			
 		</div>
